# testing-beast

./: .gitignore  CMakeLists.txt  Docker-compose.yml  main.cpp
docker/: CMakeLists.txt  Docker-compose.yml  README.md  main.cpp
plain/: CMakeLists.txt  readme.md
plain/src/: CMakeLists.txt  main.cpp  main_old.cpp
plain/src/handlers/: request_handler.h
plain/src/interpreters/: post_interpreter.h
plain/www/: index.html
